# neuraltrain

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
example/: basic_example.py  library2024_simulation_dataset_lags.json  library2024_simulation_dataset_minmax.json  robust_timeseries_example.py  timeseries_example.py
src/neuraltrain/: __init__.py  cli.py  dataloaders.py  models.py  preprocessing.py  trainer.py
tests/: test.py
